# agentic-stock-adviser

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  AGENTS.md  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  start_message
.claude/rules/: settings-api.md  streaming.md
.github/workflows/: ci.yml  release.yml
docs/: 00-ROADMAP.md  01-PILLAR-1-FOUNDATION.md  02-PILLAR-2-TOOLS-MCP.md  03-PILLAR-3-MULTI-AGENT.md  04-PILLAR-4-MEMORY.md  05-PILLAR-5-PLANNING-REASONING.md  06-PILLAR-6-SAFETY-GUARDRAILS.md  07-PILLAR-7-EVALUATION-TRACING.md  08-PILLAR-8-PRODUCTION.md
docs/learning/: sse-architecture.md
docs/superpowers/plans/: 2026-03-29-dashboard-backend.md  2026-03-29-dashboard-frontend.md  2026-04-02-multi-llm-provider.md
docs/superpowers/specs/: 2026-03-29-dashboard-design.md  2026-04-02-multi-llm-provider-design.md
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx
frontend/src/chat/: ChatPanel.tsx
frontend/src/dashboard/: Dashboard.tsx  StockTab.tsx
frontend/src/panes/: ChartPane.tsx  ReportPane.tsx  (+1 more)
scripts/: e2e_api_test.py  e2e_test.py
src/stock_adviser/: __init__.py  __main__.py  config.py  graph.py  llm.py  models.py  prompts.py  server.py  state.py  streaming.py
tests/: e2e_settings.sh  test_api.py  test_architecture.py  test_config.py  test_events.py  test_graph.py  test_llm.py  test_models.py  test_session.py  test_settings_api.py  test_smoke.py  test_streaming.py  test_tools.py
(+21 files in other folders)
